--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 	<div class="de-noise is-click-through is-nonselectable"></div>
 
 	<div class="de-wrapper">
-		our site is being update<br>return tomorrow.
+		<div class="update-note" style="text-align: center; color: black;">
+			our site is being update<br>return tomorrow.
+		</div>
 	</div>
 
 	<script src="/assets/js/app.js"></script>
