--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<div class="de-wrapper">
 		<div class="update-note" style="text-align: center; color: black;">
-			our site is being update<br>return tomorrow.
+			our site is being updated<br>return tomorrow.
 		</div>
 	</div>
 
