--- a/phongbat-index.html
+++ b/phongbat-index.html
@@ -10,7 +10,7 @@
 			href="https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="/assets/css/styler.css" />
+		<link rel="stylesheet" href="/assets/css/style.css" />
 		<meta property="og:image" content="/og-image.jpg" />
 		<meta property="og:image:height" content="1193" />
 		<meta property="og:image:width" content="2278" />
@@ -34,7 +34,16 @@
 		</header>
 
 		<main class="main">
-			<img class="phongbat-loading" src="assets/images/nhay.png" />
+			<img
+				class="phongbat-index"
+				src="assets/images/phongbat/phongbat.png"
+			/>
+			<div class="phongbat-links">
+				<a href="https://shop.deadendvietnam.com">[Mua đồ]</a>
+				<a href="https://shop.deadendvietnam.com/articles/"
+					>[Đọc báo]</a
+				>
+			</div>
 		</main>
 
 		<footer class="footer">
