--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			href="https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="/assets/css/styler.css" />
+		<link rel="stylesheet" href="/assets/css/style.css" />
 		<meta property="og:image" content="/og-image.jpg" />
 		<meta property="og:image:height" content="1193" />
 		<meta property="og:image:width" content="2278" />
