--- a/phongbat-index.html
+++ b/phongbat-index.html
@@ -34,16 +34,12 @@
 		</header>
 
 		<main class="main">
-			<img
-				class="phongbat-index"
-				src="assets/images/phongbat/phongbat.png"
-			/>
-			<div class="phongbat-links">
-				<a href="https://shop.deadendvietnam.com">[Mua đồ]</a>
-				<a href="https://shop.deadendvietnam.com/articles/"
-					>[Đọc báo]</a
-				>
-			</div>
+			<a href="https://shop.deadendvietnam.com/">
+				<img
+					class="phongbat-index"
+					src="assets/images/phongbat/phongbat.png"
+				/>
+			</a>
 		</main>
 
 		<footer class="footer">
