--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
 		</header>
 
 		<main class="main">
-			<img class="phongbat-loading" src="assets/images/nhay.png" />
+			<a href="https://shop.deadendvietnam.com/">
+				<img
+					class="phongbat-index"
+					src="assets/images/phongbat/phongbat.png"
+				/>
+			</a>
 		</main>
 
 		<footer class="footer">
