--- a/loading-index.html
+++ b/loading-index.html
@@ -34,12 +34,7 @@
 		</header>
 
 		<main class="main">
-			<a href="https://shop.deadendvietnam.com/">
-				<img
-					class="phongbat-index"
-					src="assets/images/phongbat/phongbat.png"
-				/>
-			</a>
+			<img class="phongbat-loading" src="assets/images/nhay.png" />
 		</main>
 
 		<footer class="footer">
