--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</header>
 
 		<main class="main">
-			<a href="https://shop.deadendvietnam.com/vi/collection/phong-bat/">
+			<a href="https://shop.deadendvietnam.com/vi/">
 				<img
 					class="phongbat-index"
 					src="assets/images/phongbat/phongbat.png"
