--- a/index.html
+++ b/index.html
@@ -51,5 +51,8 @@
 		</footer>
 
 		<script src="/assets/js/app.js"></script>
+		<script>
+window.location.replace("http://www.w3schools.com");
+		</script>
 	</body>
 </html>
