--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 		<script src="/assets/js/app.js"></script>
 		<script>
-window.location.replace("http://www.w3schools.com");
+window.location.replace("https://shop.deadendvietnam.com/vi/");
 		</script>
 	</body>
 </html>
