--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="stylesheet" href="https://git.haiphan.design/harmony/harmony.min.css" />
 	<link href="https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/assets/css/styler.css" />
+	<link rel="stylesheet" href="/assets/css/style.css" />
 	<meta property="og:image" content="/og-image.jpg">
 	<meta property="og:image:height" content="1193">
 	<meta property="og:image:width" content="2278">
@@ -32,7 +32,7 @@
 
 	<div class="de-note">
 
-		<a href="https://shop.deadendvietnam.com">
+		<a href="https://shop.deadendvietnam.com/vi/">
 			<svg version="1.1" class="de-girl" xmlns="http://www.w3.org/2000/svg"
 				xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 368.5 368.5"
 				style="enable-background:new 0 0 368.5 368.5;" xml:space="preserve">
