--- a/index.html
+++ b/index.html
@@ -1,48 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>DEADEND</title>
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="stylesheet" href="https://git.haiphan.design/harmony/harmony.min.css" />
+		<link href="https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="/assets/css/style.css" />
+		<meta property="og:image" content="/og-image.jpg" />
+		<meta property="og:image:height" content="1193" />
+		<meta property="og:image:width" content="2278" />
+		<meta property="og:title" content="DEADENDVIETNAM // Ăn Ngon Mặc Đẹp" />
+		<meta
+			property="og:description"
+			content="Deadend is an idea of a Viet patriot who believes in our tribe. We have no take on any parties and organizations. The world is our capital. Vietnam is our context. Deadend is our business."
+		/>
+		<meta property="og:url" content="https://deadendvietnam.com" />
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>DEADEND</title>
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="stylesheet" href="https://git.haiphan.design/harmony/harmony.min.css" />
-	<link href="https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/assets/css/style.css" />
-	<meta property="og:image" content="/og-image.jpg">
-	<meta property="og:image:height" content="1193">
-	<meta property="og:image:width" content="2278">
-	<meta property="og:title" content="DEADENDVIETNAM // Ăn Ngon Mặc Đẹp">
-	<meta property="og:description"
-		content="Deadend is an idea of a Viet patriot who believes in our tribe. We have no take on any parties and organizations. The world is our capital. Vietnam is our context. Deadend is our business.">
-	<meta property="og:url" content="https://deadendvietnam.com">
-</head>
+	<body>
+		<div class="de-noise is-click-through is-nonselectable"></div>
 
-<body>
-	<div class="de-noise is-click-through is-nonselectable"></div>
+		<div class="de-wrapper">
+			<!-- <img class="de-img" id="landingpageRandomImage" /> -->
+			<img class="ymh" src="/assets/images/ymh.jpg" />
+		</div>
 
-	<div class="de-wrapper">
-		<img class="de-img" id="landingpageRandomImage" />
-	</div>
+		<audio id="de-bgm" loop>
+			<source src="/assets/bgm/chi-lan.m4a" type="audio/m4a" />
+		</audio>
 
-	<audio id="de-bgm" loop>
-		<source src="/assets/bgm/chi-lan.m4a" type="audio/m4a" />
-	</audio>
-
-	<div class="de-note">
-
-		<a href="https://shop.deadendvietnam.com/vi/">
-			<svg version="1.1" class="de-girl" xmlns="http://www.w3.org/2000/svg"
-				xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 368.5 368.5"
-				style="enable-background:new 0 0 368.5 368.5;" xml:space="preserve">
-				<style type="text/css">
-					.st0 {
-						fill: currentColor;
-					}
-				</style>
-				<g>
-					<path class="st0" d="M301.31,282.14c-9.67-8.73-47.32-18.66-55.19-20.67c-2.23-10.55-7.2-22.99-7.28-23.17
+		<div class="de-note">
+			<a href="https://shop.deadendvietnam.com/vi/">
+				<svg
+					version="1.1"
+					class="de-girl"
+					xmlns="http://www.w3.org/2000/svg"
+					xmlns:xlink="http://www.w3.org/1999/xlink"
+					x="0px"
+					y="0px"
+					viewBox="0 0 368.5 368.5"
+					style="enable-background: new 0 0 368.5 368.5"
+					xml:space="preserve"
+				>
+					<style type="text/css">
+						.st0 {
+							fill: currentColor;
+						}
+					</style>
+					<g>
+						<path
+							class="st0"
+							d="M301.31,282.14c-9.67-8.73-47.32-18.66-55.19-20.67c-2.23-10.55-7.2-22.99-7.28-23.17
 		c-0.03-0.07-3.01-6.78,0.05-16.39c2.89-9.06,3.36-24.19,3.44-29.96c1.67-0.28,4.01-0.82,6.45-1.85
 		c6.28-2.64,10.14-7.17,11.17-13.11c1.21-6.97,0.02-12.19-3.75-16.44c-2.67-3-6.56-5.49-12.68-8.03
 		c-0.23-3.96-1.54-21.63-6.78-26.87c-0.55-0.55-1.09-1.04-1.63-1.5c1.83-0.5,3.77-1.21,5.63-2.24c5.31-2.94,8.12-7.49,8.12-13.16
@@ -124,39 +135,49 @@
 		c0.88-0.33,1.88-0.3,2.84,0.09l27.15,9.56c0.02,0.01,0.05,0,0.07,0.01C138.71,305.86,138.73,305.88,138.76,305.88z M295.99,303.34
 		c-5.14-10.07-22.34-15.84-45.04-22l-1.72-10.51c-0.04-0.26-0.18-0.49-0.39-0.64l-1.67-1.23c-0.02-0.6-0.07-1.23-0.14-1.87
 		c10.77,2.84,42.84,11.72,50.81,18.92c2.56,2.31,7.58,15.44,5.43,23.85c-0.7,2.73-2.02,4.5-4.09,5.48
-		C299.11,311.73,298.22,307.72,295.99,303.34z" />
-					<path class="st0" d="M185.04,267.32c-0.16-0.53-0.71-0.83-1.24-0.68c-0.24,0.07-5.91,1.8-18.02,12.73
+		C299.11,311.73,298.22,307.72,295.99,303.34z"
+						/>
+						<path
+							class="st0"
+							d="M185.04,267.32c-0.16-0.53-0.71-0.83-1.24-0.68c-0.24,0.07-5.91,1.8-18.02,12.73
 		c-12.56,11.33-10.47,17.61-9.92,18.76c0.11,0.24,0.32,0.42,0.57,0.51c0.11,0.04,0.22,0.06,0.33,0.06c0.15,0,0.3-0.03,0.43-0.1
 		l2.87-1.38c0.24-0.12,0.42-0.32,0.51-0.57c0.07-0.2,0.07-0.4,0.02-0.6c-0.04-0.21-0.62-4.46,8.66-12.83
-		c10.86-9.8,16-11.6,16.05-11.61c0.51-0.17,0.79-0.72,0.64-1.23L185.04,267.32z" />
-					<path class="st0" d="M189.49,66.69c-11.9,0-15.38,8.08-15.52,8.43c-0.21,0.51,0.03,1.09,0.54,1.31l2.94,1.22
+		c10.86-9.8,16-11.6,16.05-11.61c0.51-0.17,0.79-0.72,0.64-1.23L185.04,267.32z"
+						/>
+						<path
+							class="st0"
+							d="M189.49,66.69c-11.9,0-15.38,8.08-15.52,8.43c-0.21,0.51,0.03,1.09,0.54,1.31l2.94,1.22
 		c0.12,0.05,0.25,0.08,0.38,0.08c0.39,0,0.76-0.23,0.92-0.6c0.09-0.21,2.39-5.23,10.73-5.23c0.55,0,1-0.45,1-1v-3.19
-		C190.49,67.13,190.05,66.69,189.49,66.69z" />
-					<path class="st0" d="M206.75,82.7c-4.1-0.88-11.08,3.65-13.12,5.06c-0.22,0.15-0.37,0.38-0.42,0.64c-0.05,0.26,0.01,0.53,0.16,0.75
+		C190.49,67.13,190.05,66.69,189.49,66.69z"
+						/>
+						<path
+							class="st0"
+							d="M206.75,82.7c-4.1-0.88-11.08,3.65-13.12,5.06c-0.22,0.15-0.37,0.38-0.42,0.64c-0.05,0.26,0.01,0.53,0.16,0.75
 		l1.82,2.62c0.31,0.45,0.94,0.57,1.39,0.25c0.82-0.57,1.62-1.08,2.39-1.53l-2.18,2.18c-0.39,0.39-0.39,1.02,0,1.41
 		c1.69,1.69,3.61,2.58,5.57,2.58c1.5,0,2.99-0.54,4.3-1.56c2.95-2.3,4.89-7.14,2.94-10.41C208.98,83.66,207.99,82.97,206.75,82.7z
 		 M205.18,87.74c-0.04,0.78-0.53,2.36-1.71,3.27c-0.71,0.55-1.57,0.86-3.02-0.59c-0.19-0.19-0.44-0.29-0.71-0.29
-		c-0.06,0-0.12,0.01-0.18,0.02C202.14,88.68,204.25,87.89,205.18,87.74z" />
-					<path class="st0" d="M231.6,189.06c0.17,0.11,0.36,0.17,0.55,0.17c0.32,0,0.64-0.16,0.83-0.44l1.77-2.65
+		c-0.06,0-0.12,0.01-0.18,0.02C202.14,88.68,204.25,87.89,205.18,87.74z"
+						/>
+						<path
+							class="st0"
+							d="M231.6,189.06c0.17,0.11,0.36,0.17,0.55,0.17c0.32,0,0.64-0.16,0.83-0.44l1.77-2.65
 		c0.31-0.46,0.18-1.08-0.27-1.38c-0.66-0.44-2.01-1.76-2.01-2.98c0-1.32,1.65-2.3,1.76-2.36c0.01-0.01,0.03-0.01,0.04-0.02
 		c0.22-0.12,0.38-0.33,0.46-0.57c0.08-0.25,0.05-0.53-0.07-0.76l-0.74-1.41c0,0,0-0.01,0-0.01l-0.73-1.4
-		c-0.25-0.49-0.86-0.68-1.35-0.43c-0.19,0.1-4.56,2.4-4.56,6.97C227.29,186.13,231.43,188.94,231.6,189.06z" />
-					<path class="st0" d="M250.19,179.56c0.11,0.04,0.22,0.05,0.32,0.05c0.42,0,0.8-0.26,0.95-0.67l1.04-3.01
+		c-0.25-0.49-0.86-0.68-1.35-0.43c-0.19,0.1-4.56,2.4-4.56,6.97C227.29,186.13,231.43,188.94,231.6,189.06z"
+						/>
+						<path
+							class="st0"
+							d="M250.19,179.56c0.11,0.04,0.22,0.05,0.32,0.05c0.42,0,0.8-0.26,0.95-0.67l1.04-3.01
 		c0.18-0.52-0.09-1.08-0.61-1.27c-0.99-0.36-3.03-1.49-3.03-2.69c0-1.8,1.98-2.78,1.99-2.79c0.5-0.24,0.71-0.83,0.47-1.33
-		l-1.37-2.88c-0.24-0.5-0.83-0.71-1.33-0.48c-0.2,0.1-4.96,2.39-4.96,7.48C243.68,177.27,249.93,179.47,250.19,179.56z" />
-				</g>
-			</svg>
-		</a>
+		l-1.37-2.88c-0.24-0.5-0.83-0.71-1.33-0.48c-0.2,0.1-4.96,2.39-4.96,7.48C243.68,177.27,249.93,179.47,250.19,179.56z"
+						/>
+					</g>
+				</svg>
+			</a>
 
+			<div class="de-bgm-toggle" onclick="toggleBGM()"></div>
+		</div>
 
-
-
-		<div class="de-bgm-toggle" onclick="toggleBGM()"></div>
-
-
-	</div>
-
-	<script src="/assets/js/app.js"></script>
-</body>
-
+		<script src="/assets/js/app.js"></script>
+	</body>
 </html>
