--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 		</div>
 
 		<audio id="de-bgm" loop>
-			<source src="/assets/bgm/chi-lan.m4a" type="audio/m4a" />
+			<!-- <source src="/assets/bgm/chi-lan.m4a" type="audio/m4a" /> -->
+			<source src="/assets/bgm/ymh.mp3" type="audio/mp3" />
 		</audio>
 
 		<div class="de-note">
