--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 		<div class="de-noise is-click-through is-nonselectable"></div>
 
 		<div class="de-wrapper">
-			<!-- <img class="de-img" id="landingpageRandomImage" /> -->
-			<img class="ymh" src="/assets/images/ymh.jpg" />
+			<img class="de-img" id="landingpageRandomImage" />
+			<!-- <img class="ymh" src="/assets/images/ymh.jpg" /> -->
 		</div>
 
 		<audio id="de-bgm" loop>
-			<!-- <source src="/assets/bgm/chi-lan.m4a" type="audio/m4a" /> -->
-			<source src="/assets/bgm/ymh.mp3" type="audio/mp3" />
+			<source src="/assets/bgm/chi-lan.m4a" type="audio/m4a" />
+			<!-- <source src="/assets/bgm/ymh.mp3" type="audio/mp3" /> -->
 		</audio>
 
 		<div class="de-note">
